Created js folder and main.js file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+<header>
+
+</header>
+<main>
+<ol class="list">
+    <li></li>
+</ol>
+</main>  
+<footer>
+</footer>
+<script src="js/main.js"></script>
 </body>
 </html>
