--- a/index.html
+++ b/index.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Assignment Portal</title>
+  <meta name="description" content="Assignment portal for Chris Soares in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/small.css">
+  <link rel="stylesheet" href="css/medium.css">
 </head>
 <body>
-<header>
-
-</header>
-<main>
-    <ol id="links"></ol>
-</main>  
-<footer>
-</footer>
-<script src="js/main.js"></script>
+  <header>
+    <img src="images/6A86E92C-B792-4094-A218-D183B7DCC3DB_1_105_c.jpeg" alt="my photo" height=200px>
+    <h1> Chris Soares</h1>
+  </header>
+  <main>
+    <section>
+      <h2>CIT 230: Assignment Portal</h2>
+    </section>
+    <hr>
+   <ol class="links"></ol>
+    
+  </main>
+  <footer id="mainfoot">
+    &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
+  </footer>
+  <script src="js/currentdate.js"></script>
+  <script src="js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+  google: {
+    families: [
+       "Montserrat"
+    ]
+  }
+});
+  </script>
 </body>
 </html>
