--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2>CIT 230: Assignment Portal</h2>
     </section>
     <hr>
-   <ol class="links"></ol>
+   <ol id="links"></ol>
     
   </main>
   <footer id="mainfoot">
