Added link for the team activity

--- a/notes/week2/index.html
+++ b/notes/week2/index.html
@@ -38,6 +38,10 @@
 <li>Type coercion is when JavaScript tries to convert a value into another data type in order to perform an operation.</li>
 <li>Logical operators can be used to check if compound statements are true or false.</li>
 <li>Values can be compared to see if they are equal, greater than or less than other values.</li></ul>
+
+<h3>Team activity from week 2</h3>
+
+<p>We gathered as a team on April 27th to work on the team assignment. <a href="../team/week2.html">Here</a> is the result of it</p>
 </main>
 <footer id="mainfoot">
     &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
