--- a/notes/week2/index.html
+++ b/notes/week2/index.html
@@ -41,7 +41,7 @@
 
 <h3>Team activity from week 2</h3>
 
-<p>We gathered as a team on April 27th to work on the team assignment. <a href="../team/week2.html">Here</a> is the result of it</p>
+<p>We gathered as a team on April 27th to work on the team assignment. <a href="../../team/week2.html">Here</a> is the result of it</p>
 </main>
 <footer id="mainfoot">
     &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
