--- a/notes/week3/index.html
+++ b/notes/week3/index.html
@@ -16,7 +16,17 @@
         <h1>Week 3 Notes</h1>
         <h2>Chris Soares</h2>
     </header>
-<main> 
+<main>
+    <h3> "This"</h3>
+    <p>this is a keyword whose value changes depending on how a function gets called. There six different ways where this can take on new values. They are:
+</p>
+<ul><li>this in global context</li>
+    <li>this in object construction</li>
+    <li>this in an object method</li>
+    <li>this in a simple function</li>
+    <li>this in an arrow function</li>
+    <li>this in an event listener</li>
+</ul>
 </main>
 <footer id="mainfoot">
     &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
