--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <section>
-      <h2>CIT 230: Assignment Portal</h2>
+      <h2>Portfolio</h2>
     </section>
     <hr>
    <ol id="links"></ol>
