--- a/notes/week4/index.html
+++ b/notes/week4/index.html
@@ -55,6 +55,23 @@
 <li>Inside a constructor function or class declaration, the keyword this refers to the object returned by the function.</li>
 <li>All instances of a class or constructor function inherit all the properties and methods of its prototype.</li>
 </ul>
+
+<h3>Modern JavaScript Development</h3>
+<p>Summary</p>
+<ul><li>JavaScript libraries provide methods to make common tasks easier to achieve.</li>
+<li>Libraries can make programming much easier, but you should think carefully about whether you require a library, and which one is best for your needs.</li>
+<li>jQuery and Lodash are two popular libraries that provide a large number of useful and well-tested functions.</li>
+<li>npm and Yarn are package managers that can be used to install JavaScript packages, as well as any dependencies that they require.</li>
+<li>A module is a self-contained piece of code that provides functions and methods that can then be used in other files and by other modules.</li>
+<li>ES6 added support for modules, allowing code to be abstracted into their own self-contained files and imported into another file.</li>
+<li>The MVC pattern is used to organize code into distinct sections that are responsible for different elements of an application.</li>
+<li>Template files can be used to separate view code from JavaScript; they also enable dynamic code and programming logic to be used to generate markup.</li>
+<li>React and Vue.js are popular JavaScript view libraries that render components and keep track of their state.</li>
+<li>Minification is the process of removing any redundant characters from the code in order to reduce its file size.</li>
+<li>Files can be compressed on the server using the gzip compression tool.</li>
+<li>Webpack can be used to bundle multiple files into a single bundle, and automate common tasks such as transpiling, minifying code and running tests.</li>
+<li>Before code is deployed, it should be concatenated into a single file, minified and compressed. The script tag should be placed just before the closing body tag to ensure that all elements on the page have loaded before the script runs.</li>
+</ul>
 </main>
 <footer id="mainfoot">
     &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
