--- a/TODO_LIST/index.html
+++ b/TODO_LIST/index.html
@@ -20,8 +20,9 @@
                 <button id="addItem" class="button" title="Add new Item" aria-label="Add new item to list" tabindex="0">+</button>
 
             </form>
-
+                  
         </section>
+        <div id="controls"></div> 
         <section class="listContainer">
             <div class="listTitle">
                 <h1 tabindex="0">To Do List</h1>
