--- a/to_do.html
+++ b/to_do.html
@@ -33,7 +33,6 @@
         
     </footer>    
     <!-- <script src="scripts/todos.js"type='module'></script> -->
-    <script src="../js/video.js" type='module'></script>
-    <script src="../js/script.js"></script>
+    <script src="js/video.js" type='module'></script>
 </body>
 </html>
