--- a/to_do.html
+++ b/to_do.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/todo.css"> -->
 </head>
-<body onload="doInputOutput();">
+<body>
     <head>
         <h2>To Do List</h2>
     </head>
