--- a/team/week8.html
+++ b/team/week8.html
@@ -12,10 +12,10 @@
 <body>
 
     <header>
-        <div class="starwars">
+        <!-- <div class="starwars">
             <img src="https://cssanimation.rocks/demo/starwars/images/star.svg" alt="Star" class="star">
             <img src="https://cssanimation.rocks/demo/starwars/images/wars.svg" alt="Wars" class="wars">
-        </div>
+        </div> -->
     </header>
     <main>
         <div id="people"></div>
