--- a/notes/week8/index.html
+++ b/notes/week8/index.html
@@ -35,6 +35,8 @@
             <circle cx="200" cy="200" r="175" fill="black"/>
         </svg>
         <p>SVG's are Scalable Vector Graphics, they are not based on pixel counts and when scaled to larger images the quality does not decrease. Above is an example of a black circle that can scale to any size.</p>
+        <hr>
+        <p><a href="../../team/week8.html">Here</a> is the link for the team activity </p>
     </main>
     <footer id="mainfoot">
         &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
