--- a/notes/week9/index.html
+++ b/notes/week9/index.html
@@ -45,7 +45,8 @@
         <p>With HTML 5 you can add data tags that are personalized towards a specific website and it's data. All you need is the data-* element in the HTML tags.</p>
         <p>APIs are allowing for bigger data to be used with minimal transfer and quicker response times. For example session storage and local storage are used to cahce some data so that it is quicker to pull.</p>
 
-        
+        <h2>Block 2 Challenge Proposal</h2>
+        <p>You can find the proposal <a href="../../notes/week9/project.html">here</a></p>
 
     </main>
     <footer id="mainfoot">
