final project and team activity

--- a/notes/week9/index.html
+++ b/notes/week9/index.html
@@ -48,6 +48,9 @@
         <h2>Block 2 Challenge Proposal</h2>
         <p>You can find the proposal <a href="../../notes/week9/project.html">here</a></p>
 
+        <h2>Team activity</h2>
+        <p><a href="../../team/week9.html">Here</a> is the link for the team activity</p>
+
     </main>
     <footer id="mainfoot">
         &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
