--- a/notes/week10/index.html
+++ b/notes/week10/index.html
@@ -47,6 +47,9 @@
         <p>This is including credentials for the use in a POST request.</p>
         <p>Fetch also allows for the pushing of data to a web service and can work with files that include, JSON, BLOB, txt, and many more.</p>
 
+        <h3>Quakes Activity</h3>
+        You can find it <a href="../../earthquake/index.html">here</a>
+
 </main>
 <footer id="mainfoot">
     &copy; 2021 | Chris Soares | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> <br>Last Updated: <span id="currentdate"></span>
